# music-player

./: Cargo.toml  LICENSE
src/: app.rs  main.rs
src/playback/: controls.rs
src/ui/: button.rs
src/view/: app.rs  player.rs
