[package]
name = "icy-player"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lofty = { version = "0.21.1" }
mpris = { version = "2.0.1" }

[dependencies.rfd]
version = "0.15.1"

[dependencies.rodio]
version = "0.20.1"
features = [
  "symphonia-wav",
  "symphonia-vorbis",
  "symphonia-mp3",
  "symphonia-flac",
]
default-features = false

[dependencies.iced]
version = "0.13.1"
features = ["async-std", "image"]
